--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosqlite==0.17.0
 annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==4.0.3
@@ -15,6 +16,7 @@ httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iso8601==1.1.0
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -25,13 +27,16 @@ pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
 PyJWT==2.8.0
+pypika-tortoise==0.1.6
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
+tortoise-orm==0.21.3
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
