--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build: .
     env_file:
       - .env.prod
-    container_name: backend
+    container_name: fool
     command: ["/app/docker/app.sh"]
     volumes:
       - ./media:/app/media
